--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <properties>
     <meecrowave.version>1.2.0</meecrowave.version>
+    <johnzon.version>1.1.7</johnzon.version>
     <log4j.version>2.10.0</log4j.version>
   </properties>
 
@@ -44,6 +45,12 @@
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.johnzon</groupId>
+      <artifactId>johnzon-core</artifactId>
+      <version>${johnzon.version}</version>
     </dependency>
 
 
